<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog_rounded"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/title_add_transaction"
        android:textColor="#202B3C"
        android:textSize="25sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rgTransactionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:id="@+id/rbExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/expense"
            android:textColor="#202B3C"
            android:layout_marginEnd="20dp"/>

        <RadioButton
            android:id="@+id/rbIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:textColor="#202B3C" />
    </RadioGroup>


    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title"
        android:background="@drawable/bg_input_rounded"
        android:padding="12dp"
        android:textColor="#202B3C"
        android:textColorHint="#999"
        android:layout_marginBottom="12dp"/>


    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_amount"
        android:inputType="numberDecimal"
        android:background="@drawable/bg_input_rounded"
        android:padding="12dp"
        android:textColor="#202B3C"
        android:textColorHint="#999"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Danh mục"
        android:textStyle="bold"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="4dp"/>

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_input_rounded"
        android:padding="13dp"
        android:layout_marginBottom="12dp"
        android:drawableEnd="@drawable/ic_arrow_drop_down"
        android:popupBackground="@color/white"/>

    <EditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_date_format"
        android:background="@drawable/bg_input_rounded"
        android:padding="12dp"
        android:textColor="#202B3C"
        android:textColorHint="#999"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_transaction"
        android:textColor="@android:color/white"
        android:shadowColor="@color/black"
        android:backgroundTint="@color/primary"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:padding="12dp"
        android:background="@drawable/bg_button_rounded"/>

</LinearLayout>